# kube-helper-ai-demo

./: build-mcpo.sh  deploy.nix  flake.nix  helmfile.yaml  helmfile.yaml.gotmpl  init-k8s-resources.sh  mcpo.Dockerfile  pipelines_image.nix  restart-demo
config/: mcp-config.json  system-prompt.txt
k8s/: mcpo-deployment.yaml  mcpo-rbac.yaml  playground-namespace.yaml  production-secrets.yaml  setup-exploits.sh
mcp-servers/: README.md  pyproject.toml  shell-server.py
values/: open-webui.values.yaml
